# fractal-renderer

./: Cargo.toml  readme.md
src/: fractale.rs  img.rs  main.rs
